// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failure() should fail 1`] = `
Object {
  "message": "Should always fail",
  "path": Array [],
  "type": "single",
  "value": 1,
}
`;

exports[`failure() should support custom message 1`] = `
Object {
  "message": "Custom message",
  "path": Array [],
  "type": "single",
  "value": null,
}
`;
